# OS

./: OS.code-workspace  README.md  SOURCECODE2.CPP
CMake/: CMakeLists.txt  CMakeSettings.json
CMake/CMake/: CMake.bash  CMake.cpp  CMake.h  CMakeLists.txt  Chapter 3 practice.docx  Makefile  Putty.bash  WinSCP.bat  WinSCP.ps1  common.h  consumer.bash  consumer.cpp  producer.cpp  sem_util.cpp
ExtentA/: ExtentA.sln
ExtentA/ExtentA/: ExtentA.cpp  ExtentA.vcxproj  ExtentA.vcxproj.filters  Makefile  common.h  main.cpp
FIFO/: FIFO.sln
FIFO/FIFO/: Backup of Chapter 6 programming practice.wbk  Chapter 6 programming practice.docx  FIFO.vcxproj  FIFO.vcxproj.filters  Makefile  common.h  fifo.cpp  main.cpp
GiaiPhuongTrinh/: GiaiPhuongTrinh.sln
GiaiPhuongTrinh/GiaiPhuongTrinh/: GiaiPhuongTrinh.cpp  GiaiPhuongTrinh.vcxproj  GiaiPhuongTrinh.vcxproj.filters  Makefile  PhuongTrinh.h  PhuongTrinhBac1.cpp  script.bash
ResourceRequest/: ResourceRequest.sln
ResourceRequest/ResourceRequest/: Backup of Chapter 4 programming practice.wbk  Chapter 4 programming practice.docx  Makefile  ResourceRequest.bash  ResourceRequest.vcxproj  ResourceRequest.vcxproj.filters  WinSCP.bat  common.h  main.bash  main.cpp  main1.cpp  resourcerequest.cpp  resourcerequest1.cpp
SRTF/main/: main.sln
Semaphore/Semaphore/: Semaphore.sln
SingleFile/: SingleFile.sln
SingleFile/SingleFile/: BEAUTIFUL.cpp  CONTEST.cpp  (+4 more)
mft/: Chapter 5 programming practice.docx  Makefile  common.h  main.cpp  main0.cpp  main1.cpp  main2.cpp  main3.cpp  mft.cpp  mft.inp  mft.sln  mft.vcxproj  mft.vcxproj.filters
(+25 files in other folders)
